--- a/CommandsService/CommandsService/appsettings.Development.json
+++ b/CommandsService/CommandsService/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort": "5672",
+  "GrpcPlatform" : "http://localhost:5001"
 }
