--- a/PlatformService/PlatformService/appsettings.Development.json
+++ b/PlatformService/PlatformService/appsettings.Development.json
@@ -5,5 +5,11 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "CommandService": "https://localhost:44322",
+  "ConnectionStrings": {
+      "PlatformConn": "Server=localhost, 1433;Initial Catalog=platformsdb;User ID=sa;Password=pa55w0rd!;"
+  },
+  "RabbitMQHost": "localhost",
+  "RabbitMQPort": "5672"
 }
